# mcp-joke-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DOCKER.md  Dockerfile  Makefile  README.md  REFACTORING_SUMMARY.md  REPOSITORY_PATTERN_INDEX.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
.junie/: guidelines.md
docs/: ARCHITECTURE_DIAGRAM.md  C4_ARCHITECTURE.md  CHANGELOG.md  CONFIG_REFACTORING_SUMMARY.md  MIGRATION_GUIDE.md  README.md  REPOSITORY_ARCHITECTURE.md  REPOSITORY_PATTERN_SUMMARY.md  TESTING_GUIDE.md  TEST_SUMMARY.md  TRANSPORT_STRATEGY_PATTERN.md
examples/: authenticated_http_client.py  mcp_client.py  repository_pattern_demo.py
repositories/: __init__.py  base.py  cached_repository.py  factory.py  http_repository.py
strategies/: __init__.py  base.py  factory.py  http_strategy.py  sse_strategy.py  stdio_strategy.py
tests/: __init__.py  conftest.py  test_async_api_client.py  test_async_concurrency.py  test_async_convenience_functions.py  test_async_error_handling.py  test_async_integration.py  test_async_mcp_tools.py  test_auth.py  test_auth_middleware.py  test_cached_repository.py  test_config.py  test_exceptions.py  test_factory.py  test_integration.py  test_main_tools.py  test_repositories_base.py  test_transport_strategies.py
utils/: RequestAPIJokes.py  auth.py  config.py  constants.py  exceptions.py  formatters.py  logger.py  logging_config.py  logging_interfaces.py  model.py  rich_renderers.py
